better sizing of search bar to prevent overflow and more pleasing experience in general

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   padding: 0;
   margin: 0;
 }
@@ -21,6 +22,7 @@ body, html {
   font-size: 14px;
   padding: 0 8px;
   color: #666;
-  width: 400px;
+  width: 80%;
+  max-width: 400px;
   margin-bottom: 30px;
 }
